--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://monika163.github.io/React_WeatherApp",
+  "homepage": "http://monika163.github.io/ReactJs_WeatherApp", 
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
