--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "weather",
+  "homepage": "http://monika163.github.io/WeatherApp", 
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://monika163.github.io/Reactjs-WeatherApp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
